(fix) Add overflow to side-menu

--- a/client/styles/sideMenu.scss
+++ b/client/styles/sideMenu.scss
@@ -29,6 +29,7 @@
     padding: 15px;
     z-index: 5;
     display: none;
+    overflow-y: auto;
     &.show-nav {
       display: block;
     }
