--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -111,7 +111,7 @@ li {
 }
 
 a.mswPower {
-  position: absolute;
+  position: relative;
   padding: 0 5px 10px 10px;
   right: 10px;
   bottom: 10px;
